fix formatting for get involved and FAQ on mobile

--- a/ttm-2022/css/style.css
+++ b/ttm-2022/css/style.css
@@ -425,10 +425,6 @@ td {
   color: #cc7ed2;
 }
 
-.getinvolved-col {
-  flex: 5 10 20%;
-}
-
 .btn-ttmiami-cyan {
   background-color: #51dbf6;
   border-color: #51dbf6;
